Feat: Add Minimalist Log Book (Yesterday/Today)

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,18 @@
             <div>LOC: <span id="view-coords">0, 0</span></div>
             <div>ZM: <span id="view-zoom">1.0x</span></div>
           </div>
+
+          <!-- Log Book (Minimalist Box) -->
+          <div class="log-book">
+            <div class="log-entry">
+              <span class="log-label">YESTERDAY</span>
+              <span id="log-yesterday" class="log-content">Initializing...</span>
+            </div>
+            <div class="log-entry">
+              <span class="log-label">TODAY</span>
+              <span id="log-today" class="log-content">Waiting for Orders...</span>
+            </div>
+          </div>
           
           <!-- Explicit Navigation Controls -->
           <div class="nav-controls">
