Final VIP Operations Refinements (UI & Scheduling)

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
               <span class="log-label">TODAY</span>
               <span id="log-today" class="log-content">Waiting for Orders...</span>
             </div>
+            <button id="jump-active" class="jump-active-btn" onclick="rideTrain(trains[0]?.id)">📍 JUMP TO ACTIVE</button>
           </div>
           
           <!-- Explicit Navigation Controls -->
